# Gtd_tui

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: closure.mdc
.github/workflows/: ci.yml  release.yml
gtd_tui/: __main__.py  app.py  config.py  portability.py
gtd_tui/gtd/: area.py  dates.py  folder.py  operations.py  project.py  task.py
gtd_tui/i18n/: __init__.py
gtd_tui/storage/: crypto.py  file.py  lockfile.py  rotating_backup.py
gtd_tui/text/: __init__.py  processing.py
gtd_tui/widgets/: vim_input.py
scripts/: pre_push_check.py  reorder_changelog_section.py
tests/: __init__.py  cfg.py  conftest.py  test_config.py  test_css_variables.py  test_i18n.py  test_main.py  test_portability.py
tests/app/: test_acceptance.py  test_acceptance_tags_projects_areas.py  test_app.py  test_cutpaste.py  test_deadline_and_review.py  test_feature_batch.py  test_feature_batch2.py  test_import.py  test_inbox.py  test_markdown_notes.py  test_new_features.py  test_snooze.py  test_split_view.py  test_vi_keybindings.py  test_vim_navigation_batch.py  test_visual_mode.py
tests/gtd/: test_areas.py  test_checklist.py  test_dates.py  test_deadline.py  test_folder_ops.py  test_new_operations.py  test_operations.py  test_projects.py  test_tags.py  test_task.py
tests/scripts/: test_reorder_changelog_section.py
tests/storage/: test_backup.py  test_crypto.py  test_file.py  test_lockfile.py
tests/text/: test_processing.py
tests/widgets/: test_vim_input.py
(+7 files in other folders)
