[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtd-tui"
version = "1.1.0"
description = "GTD task manager TUI"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.70",
    "platformdirs>=4.0",
    "cryptography>=41.0",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
gtd-tui = "gtd_tui.__main__:main"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
